--- a/syllabus.html
+++ b/syllabus.html
@@ -91,6 +91,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="./syllabus.html" aria-current="page">
  <span class="menu-text">Syllabus</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./randomization.html">
+ <span class="menu-text">Randomization</span></a>
+  </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
           </div> <!-- /navcollapse -->
