--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Syllabus</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./randomization.html">
+    <a class="nav-link" href="./causalinftopics.html">
  <span class="menu-text">Causal Inference Topics</span></a>
   </li>  
 </ul>
