--- a/schedule.html
+++ b/schedule.html
@@ -91,6 +91,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./syllabus.html">
  <span class="menu-text">Syllabus</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./causalinftopics.html">
+ <span class="menu-text">Causal Inference Topics</span></a>
+  </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
           </div> <!-- /navcollapse -->
