add DAGs to website

--- a/schedule.html
+++ b/schedule.html
@@ -209,7 +209,7 @@ ul.task-list li input[type="checkbox"] {
 <td>Feb 16</td>
 <td>Fixed Effects lab</td>
 <td>Quiz 1 (45 minutes in class, covers Random Assignment, Regression Analysis, DAG’s, and Instrumental Variables), Reflection 3 due midnight Feb 19th</td>
-<td></td>
+<td>Read: The Effect, <a href="https://theeffectbook.net/ch-FixedEffects.html">Chapter 16</a></td>
 </tr>
 <tr class="odd">
 <td>Feb 21</td>
