remove zoom passcode

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ ul.task-list li input[type="checkbox"] {
 <p>It is best to attend class in person, but in case you are ill or have a conflict you can join via Zoom or catch-up via the recording of the Zoom session.</p>
 <p><strong>Zoom link for all class sessions</strong>: <a href="https://ubc.zoom.us/s/67893501232" class="uri">https://ubc.zoom.us/s/67893501232</a></p>
 <p>Meeting ID: 678 9350 1232</p>
-<p>Passcode: 443207</p>
+<p>Passcode: check Canvas for passcode</p>
 <p><strong>Instructor</strong>: Professor Sumeet Gulati</p>
 <p>Contact: sumeet.gulati@ubc.ca, 604-822-2144</p>
 <p>Office: MCML 341</p>
