--- a/schedule.html
+++ b/schedule.html
@@ -202,13 +202,13 @@ ul.task-list li input[type="checkbox"] {
 <tr class="odd">
 <td>Feb 14</td>
 <td>Economic Development, Species Loss and Extraction</td>
-<td>Assignment 2 due</td>
+<td></td>
 <td>Paper to read: <a href="https://doi.org/10.1016/j.jeem.2021.102603">Eisenbarth, S. (2022)</a></td>
 </tr>
 <tr class="even">
 <td>Feb 16</td>
 <td>Fixed Effects lab</td>
-<td>Quiz 1 (45 minutes in class, covers Random Assignment, Regression Analysis, DAG’s, and Instrumental Variables), Reflection 3 due midnight Feb 19th</td>
+<td>Quiz 1 (45 minutes in class, covers Random Assignment, Regression Analysis, DAG’s, and Instrumental Variables), Assignment 2 due, Reflection 3 due midnight Feb 19th</td>
 <td>Read: The Effect, <a href="https://theeffectbook.net/ch-FixedEffects.html">Chapter 16</a></td>
 </tr>
 <tr class="odd">
@@ -226,7 +226,7 @@ ul.task-list li input[type="checkbox"] {
 <tr class="odd">
 <td>Feb 28</td>
 <td>Ecosystem Services and Land Rental Markets</td>
-<td>Assignment 3 given (covers regression discontinuity, and difference and differences)</td>
+<td>Assignment 3 given (Covers Regression Discontinuity, and Difference-in-Differences)</td>
 <td>Paper to read: <a href="https://www.journals.uchicago.edu/doi/10.1086/720303">Manning, D.T., and Ando, A. (2022)</a></td>
 </tr>
 <tr class="even">
