--- a/DAG.html
+++ b/DAG.html
@@ -155,8 +155,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
  <span class="menu-text">Syllabus</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./DAG.html" aria-current="page">
- <span class="menu-text">Directed Acyclic Graphs (DAG)</span></a>
+    <a class="nav-link" href="./causalinftopics.html">
+ <span class="menu-text">Causal Inference Topics</span></a>
   </li>  
 </ul>
               <div id="quarto-search" class="" title="Search"></div>
