--- a/schedule.html
+++ b/schedule.html
@@ -304,7 +304,7 @@ ul.task-list li input[type="checkbox"] {
 <tr class="even">
 <td>Apr 13</td>
 <td>Wrap up</td>
-<td>Quiz 3 (covers Fixed Effects, Regression Discontinuity, Differences and Differences), Referee report due midnight April 16th</td>
+<td>Quiz 3 (covers Fixed Effects, Regression Discontinuity, Differences and Differences), Referee report due midnight April 21th, Final paper due midnight April 28th</td>
 <td></td>
 </tr>
 </tbody>
