--- a/schedule.html
+++ b/schedule.html
@@ -128,7 +128,371 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>You can find the working schedule for this term (2023/24 W2) <a href="https://docs.google.com/spreadsheets/d/11M5v30gOsW__1Uks8Gkexo6X_GS0U2BUlHVbNW7HJdo/edit?usp=sharing">here</a>. We are still determining exact dates for assignments, data labs, etc., and will finalize the schedule in the coming weeks.</p>
+<table class="table">
+<tbody>
+<tr class="odd">
+<td><strong>Number</strong></td>
+<td><strong>Day</strong></td>
+<td><strong>Date</strong></td>
+<td><strong>Topic</strong></td>
+<td><strong>Assignments/Quizzes/Reflections.</strong></td>
+<td><strong>Additional Information</strong></td>
+</tr>
+<tr class="even">
+<td>Lecture 1</td>
+<td>T</td>
+<td>1/9/2024</td>
+<td>Introduction, and the Economics of Conservation</td>
+<td></td>
+<td><p>Papers to read:</p>
+<p>1) Metrick, A., &amp; Weitzman, M. L. (1998). Conflicts and choices in biodiversity preservation. Journal of Economic Perspectives, 12(3), 21-34, and</p>
+<p>2) Adamowicz, W. L. (2016). Economic analysis and species at risk: Lessons learned and future challenges. Canadian Journal of Agricultural Economics/Revue canadienne d’agroeconomie, 64(1), 21-32.</p>
+<p>Videos to Watch: Nick Huntington-Klien on interpreting regression coefficients:</p>
+<p>1) https://youtu.be/3WuHicIVxnM,</p>
+<p>2) https://youtu.be/J8IHdu-oM64.</p></td>
+</tr>
+<tr class="odd">
+<td>Lab 1</td>
+<td>W</td>
+<td>1/10/2024</td>
+<td>No lab</td>
+<td></td>
+<td>See Lecture 1</td>
+</tr>
+<tr class="even">
+<td>Lecture 2</td>
+<td>Th</td>
+<td>1/11/2024</td>
+<td>The economics of Conservation Continued</td>
+<td>Assignment 1 given (covers Random Assignment, and Regression Analysis).</td>
+<td>See Lecture 1</td>
+</tr>
+<tr class="odd">
+<td>Lecture 3</td>
+<td>T</td>
+<td>1/16/2024</td>
+<td>Counterfactual Thinking</td>
+<td></td>
+<td>Paper to Read: Ferraro, P. J. (2009). Counterfactual thinking and impact evaluation in environmental policy. New directions for evaluation, 2009(122), 75-84.</td>
+</tr>
+<tr class="even">
+<td>Lab 2</td>
+<td>W</td>
+<td>1/17/2024</td>
+<td>No lab</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>Lecture 4</td>
+<td>Th</td>
+<td>1/18/2024</td>
+<td>Counterfactual Thinking</td>
+<td>Reflection 1 due midnight Jan 21st.</td>
+<td>Paper to Read: Ferraro, P. J. (2009). Counterfactual thinking and impact evaluation in environmental policy. New directions for evaluation, 2009(122), 75-84.</td>
+</tr>
+<tr class="even">
+<td>Lecture 5</td>
+<td>T</td>
+<td>1/23/2024</td>
+<td>The Economics of Forest Conservation</td>
+<td></td>
+<td>Paper to read: Foster, A.D. and Rosenzweig, M.R., 2003. Economic growth and the rise of forests. The Quarterly Journal of Economics, 118(2), pp.601-637.</td>
+</tr>
+<tr class="odd">
+<td>Lab 3</td>
+<td>W</td>
+<td>1/24/2024</td>
+<td>No lab</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td>Lecture 6</td>
+<td>Th</td>
+<td>1/25/2024</td>
+<td>Random Assignment</td>
+<td></td>
+<td>Chapter 1, Angrist and Pischke</td>
+</tr>
+<tr class="odd">
+<td>Lecture 7</td>
+<td>T</td>
+<td>1/30/2024</td>
+<td>The Economics of Forest Conservation</td>
+<td>Assignment 2 given (Covers DAGs and Instrumental Variables)</td>
+<td>Paper to read: Foster, A.D. and Rosenzweig, M.R., 2003. Economic growth and the rise of forests. The Quarterly Journal of Economics, 118(2), pp.601-637.</td>
+</tr>
+<tr class="even">
+<td>Lab 4</td>
+<td>W</td>
+<td>1/31/2024</td>
+<td>Lab on Random Assignment</td>
+<td></td>
+<td>Chapter 1, Angrist and Pischke</td>
+</tr>
+<tr class="odd">
+<td>Lecture 8</td>
+<td>Th</td>
+<td>2/1/2024</td>
+<td>DAGs</td>
+<td><p>Assignment 1 due midnight Feb 2nd</p>
+<p>Reflection 2 due midnight Feb 4th</p></td>
+<td>Chapter 6, 7, The Effect Book: <a href="https://theeffectbook.net/index.html" class="uri">https://theeffectbook.net/index.html</a>, Chapter 3, Causal Inference: The Mixtape, <a href="https://mixtape.scunning.com/dag.html." class="uri">https://mixtape.scunning.com/dag.html.</a></td>
+</tr>
+<tr class="even">
+<td>Lecture 9</td>
+<td>T</td>
+<td>2/6/2024</td>
+<td>Economic Development, Species Loss and Extraction</td>
+<td></td>
+<td>Paper to read: Naidoo, R., &amp; Adamowicz, W. L. (2001). Effects of economic prosperity on numbers of threatened species. Conservation Biology, 15(4), 1021-1029.</td>
+</tr>
+<tr class="odd">
+<td>Lab 5</td>
+<td>W</td>
+<td>2/7/2024</td>
+<td>Lab on DAGs/Regression Analysis</td>
+<td></td>
+<td>Chapter 2, Angrist and Pischke</td>
+</tr>
+<tr class="even">
+<td>Lecture 10</td>
+<td>Th</td>
+<td>2/8/2024</td>
+<td>Regression Analysis</td>
+<td>Assignment 2 due midnight Feb 11th.</td>
+<td>Chapter 2, Angrist and Pischke</td>
+</tr>
+<tr class="odd">
+<td>Lecture 11</td>
+<td>T</td>
+<td>2/13/2024</td>
+<td>Ecosystem Services and Land Rental Markets</td>
+<td></td>
+<td>Paper to Read: Manning, D. T., &amp; Ando, A. (2022). Ecosystem Services and Land Rental Markets: Producer Costs of Bat Population Crashes. Journal of the Association of Environmental and Resource Economists, 9(6), 1235-1277.</td>
+</tr>
+<tr class="even">
+<td>Lab 6</td>
+<td>W</td>
+<td>2/14/2024</td>
+<td>Lab on Regression Analysis/Fixed Effects.</td>
+<td></td>
+<td>Read: The Effect, <a href="https://theeffectbook.net/ch-FixedEffects.html">Chapter 16</a></td>
+</tr>
+<tr class="odd">
+<td>Lecture 12</td>
+<td>Th</td>
+<td>2/15/2024</td>
+<td>Instrumental Variables</td>
+<td><p>Quiz 1 (45 minutes in class. Covers Random Assignment, Regression Analysis, DAG’s, and Instrumental Variables).</p>
+<p>Reflection 3 due midnight Feb 18th.</p></td>
+<td>Chapter 3, Angrist and Pischke</td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td>2/20/2024</td>
+<td>Midsemester Break</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td></td>
+<td></td>
+<td>2/21/2024</td>
+<td>Midsemester Break</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td>2/22/2024</td>
+<td>Midsemester Break</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>Lecture 13</td>
+<td>T</td>
+<td>2/27/2024</td>
+<td>Ecosystem Services and Land Rental Markets</td>
+<td>Assignment 3 given (covers regression discontinuity, and difference and differences).</td>
+<td>Paper to Read: Manning, D. T., &amp; Ando, A. (2022). Ecosystem Services and Land Rental Markets: Producer Costs of Bat Population Crashes. Journal of the Association of Environmental and Resource Economists, 9(6), 1235-1277.</td>
+</tr>
+<tr class="even">
+<td>Lab 7</td>
+<td>W</td>
+<td>2/28/2024</td>
+<td>Lab on Instrumental Variables</td>
+<td></td>
+<td>Chapter 3, Angrist and Pischke</td>
+</tr>
+<tr class="odd">
+<td>Lecture 14</td>
+<td>Th</td>
+<td>2/29/2024</td>
+<td>Regression Discontinuity, lecture.</td>
+<td></td>
+<td>Chapter 4, Angrist and Pischke.</td>
+</tr>
+<tr class="even">
+<td>Lecture 15</td>
+<td>T</td>
+<td>3/5/2024</td>
+<td>Farm size and biodiversity.</td>
+<td></td>
+<td>Paper to read: Noack, F., Larsen, A., Kamp, J., &amp; Levers, C. (2021). A bird’s eye view of farm size and biodiversity: The ecological legacy of the iron curtain. American Journal of Agricultural Economics.</td>
+</tr>
+<tr class="odd">
+<td>Lab 8</td>
+<td>W</td>
+<td>3/6/2024</td>
+<td>Lab on Regression Discontinuity</td>
+<td></td>
+<td>Chapter 4, Angrist and Pischke.</td>
+</tr>
+<tr class="even">
+<td>Lecture 16</td>
+<td>Th</td>
+<td>3/7/2024</td>
+<td>Differences in Differences.</td>
+<td>Reflection 4 due midnight March 12th.</td>
+<td>Chapter 5, Angrist and Pischke.</td>
+</tr>
+<tr class="odd">
+<td>Lecture 17</td>
+<td>T</td>
+<td>3/12/2024</td>
+<td>Conservation and its impact on labor markets.</td>
+<td><p>Assignment 3 due.</p>
+<p>Assignment 4 given (designed to help you start your final projects).</p></td>
+<td>Paper to read: Frank, E., (2020), The Impact of the Northern Spotted Owl Conservation Plan on Local Labor Markets, working paper.</td>
+</tr>
+<tr class="even">
+<td>Lab 9</td>
+<td>W</td>
+<td>3/13/2024</td>
+<td>Lab on Differences in Differences.</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>Lecture 18</td>
+<td>Th</td>
+<td>3/14/2024</td>
+<td>Topical Discussion.</td>
+<td>Assignment 3 due midnight March 15th.</td>
+<td>Topic to be determined.</td>
+</tr>
+<tr class="even">
+<td>Lecture 19</td>
+<td>T</td>
+<td>3/19/2024</td>
+<td>Protected Areas</td>
+<td></td>
+<td>Paper to read: Andam, Kwaw S, Paul J Ferraro, Katharine R E Sims, Andrew Healy, and Margaret B Holland. 2010. “Protected areas reduced poverty in Costa Rica and Thailand.” Proceedings of the National Academy of Sciences of the United States of America 107 (22): 9996–10001.</td>
+</tr>
+<tr class="odd">
+<td>Lab 10</td>
+<td>W</td>
+<td>3/20/2024</td>
+<td>Data lab.</td>
+<td>Quiz 2 (coding exercise in class).</td>
+<td></td>
+</tr>
+<tr class="even">
+<td>Lecture 20</td>
+<td>Th</td>
+<td>3/21/2024</td>
+<td>Discussion on your final projects.</td>
+<td><p>Assignment 5 given (also designed to help you complete tasks related to the final project).</p>
+<p>Assignment 4 due midnight March 22nd.</p>
+<p>Reflection 5 due midnight March 24th.</p></td>
+<td>Will address issues related to your final projects.</td>
+</tr>
+<tr class="odd">
+<td>Lecture 21</td>
+<td>T</td>
+<td>3/26/2024</td>
+<td>Protected Areas</td>
+<td></td>
+<td>Paper to read: Burgess, R., Costa, F. J., &amp; Olken, B. A. (2018). Wilderness Conservation and the Reach of the State: Evidence from National Borders in the Amazon (No.&nbsp;w24861). National Bureau of Economic Research</td>
+</tr>
+<tr class="even">
+<td>Lab 11</td>
+<td>W</td>
+<td>3/27/2024</td>
+<td>Data lab.</td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>Lecture 22</td>
+<td>Th</td>
+<td>3/28/2024</td>
+<td>Reintroduction and Local Economies.</td>
+<td><p>Referee report assigned.</p>
+<p>Assignment 5 due midnight Mar 29.</p></td>
+<td>Paper to read: Li, L., &amp; Ando, A. W. (2022). The impact of bison reintroduction on local economies. Agricultural and Resource Economics Review, 51(3), 455-472.</td>
+</tr>
+<tr class="even">
+<td>Lecture 23</td>
+<td>T</td>
+<td>4/2/2024</td>
+<td>Reintroduction and Local Economies.</td>
+<td></td>
+<td>Paper to read: Li, L., &amp; Ando, A. W. (2022). The impact of bison reintroduction on local economies. Agricultural and Resource Economics Review, 51(3), 455-472.</td>
+</tr>
+<tr class="odd">
+<td>Lab 12</td>
+<td>W</td>
+<td>4/3/2024</td>
+<td>Data lab.</td>
+<td></td>
+<td>Will address issues related to your final projects.</td>
+</tr>
+<tr class="even">
+<td>Lecture 24</td>
+<td>Th</td>
+<td>4/4/2024</td>
+<td>Endangered Species Act: Matching Methods</td>
+<td>Reflection 6 due midnight April 7th.</td>
+<td>Reading Assigned: Ferraro, P. J., McIntosh, C., &amp; Ospina, M. (2007). The effectiveness of the US endangered<br>
+species act: An econometric analysis using matching methods. Journal of Environmental<br>
+Economics and Management, 54(3), 245-261.</td>
+</tr>
+<tr class="odd">
+<td>Lecture 25</td>
+<td>T</td>
+<td>4/9/2024</td>
+<td>Topical Discussion.</td>
+<td></td>
+<td>Topic to be determined (topical discussion).</td>
+</tr>
+<tr class="even">
+<td>Lab 13</td>
+<td>W</td>
+<td>4/10/2024</td>
+<td>Data lab.</td>
+<td></td>
+<td>Will address issues related to your final projects.</td>
+</tr>
+<tr class="odd">
+<td>Lecture 26</td>
+<td>Th</td>
+<td>4/11/2024</td>
+<td>Endangered Species Act and Wrap Up.</td>
+<td><p>Quiz 3 (covers Fixed Effects, Regression Discontinuity, Differences and Differences).</p>
+<p>Referee report due midnight April 19th.</p>
+<p>Final Paper due midnight Apr 26th.</p></td>
+<td>Reading Assigned: Ferraro, P. J., McIntosh, C., &amp; Ospina, M. (2007). The effectiveness of the US endangered<br>
+species act: An econometric analysis using matching methods. Journal of Environmental<br>
+Economics and Management, 54(3), 245-261.</td>
+</tr>
+</tbody>
+</table>
 
 
 
