--- a/schedule.html
+++ b/schedule.html
@@ -236,8 +236,8 @@ ul.task-list li input[type="checkbox"] {
 <td>Th</td>
 <td>2/1/2024</td>
 <td>DAGs</td>
-<td><p>Assignment 1 due midnight Feb 2nd</p>
-<p>Reflection 2 due midnight Feb 4th</p></td>
+<td><p>Reflection 2 due midnight Feb 4th</p>
+<p>Assignment 1 due midnight Feb 5th</p></td>
 <td>Chapter 6, 7, The Effect Book: <a href="https://theeffectbook.net/index.html" class="uri">https://theeffectbook.net/index.html</a>, Chapter 3, Causal Inference: The Mixtape, <a href="https://mixtape.scunning.com/dag.html." class="uri">https://mixtape.scunning.com/dag.html.</a></td>
 </tr>
 <tr class="even">
@@ -366,8 +366,7 @@ ul.task-list li input[type="checkbox"] {
 <td>T</td>
 <td>3/12/2024</td>
 <td>Conservation and its impact on labor markets.</td>
-<td><p>Assignment 3 due.</p>
-<p>Assignment 4 given (designed to help you start your final projects).</p></td>
+<td>Assignment 4 given (designed to help you start your final projects).</td>
 <td>Paper to read: Frank, E., (2020), The Impact of the Northern Spotted Owl Conservation Plan on Local Labor Markets, working paper.</td>
 </tr>
 <tr class="even">
