update assignment 2 due date

--- a/schedule.html
+++ b/schedule.html
@@ -261,7 +261,7 @@ ul.task-list li input[type="checkbox"] {
 <td>Th</td>
 <td>2/8/2024</td>
 <td>Regression Analysis</td>
-<td>Assignment 2 due midnight Feb 11th.</td>
+<td></td>
 <td>Chapter 2, Angrist and Pischke</td>
 </tr>
 <tr class="odd">
@@ -286,7 +286,8 @@ ul.task-list li input[type="checkbox"] {
 <td>2/15/2024</td>
 <td>Instrumental Variables</td>
 <td><p>Quiz 1 (45 minutes in class. Covers Random Assignment, Regression Analysis, DAG’s, and Instrumental Variables).</p>
-<p>Reflection 3 due midnight Feb 18th.</p></td>
+<p>Reflection 3 due midnight Feb 18th.</p>
+<p>Assignment 2 due midnight Feb 17th.</p></td>
 <td>Chapter 3, Angrist and Pischke</td>
 </tr>
 <tr class="even">
