--- a/schedule.html
+++ b/schedule.html
@@ -398,8 +398,8 @@ ul.task-list li input[type="checkbox"] {
 <td>Lab 10</td>
 <td>W</td>
 <td>3/20/2024</td>
-<td>Data lab.</td>
-<td>Quiz 2 (coding exercise in class).</td>
+<td>No lab this week</td>
+<td>Start work on your final papers, includin Assignments 4 and 5</td>
 <td></td>
 </tr>
 <tr class="even">
@@ -425,7 +425,7 @@ ul.task-list li input[type="checkbox"] {
 <td>W</td>
 <td>3/27/2024</td>
 <td>Data lab.</td>
-<td></td>
+<td>Quiz 2 (coding exercise in class).</td>
 <td></td>
 </tr>
 <tr class="odd">
